# Main-Project

./: .gitignore  LICENSE
Documents/: literature report.docx
Project/: docker-compose.yml
Project/backend/: .env.example  .gitignore  api.py  main.py  model.py  pyproject.toml
Project/backend/auth/: controller.py  models.py  services.py
Project/backend/chat/: controller.py  models.py  services.py
Project/backend/data/: redis_client.py
Project/backend/database/: core.py  redis_client.py
Project/backend/entities/: conversation.py  message.py  user.py
Project/backend/middleware/: auth_middleware.py
Project/backend/model/: controller.py
Project/backend/static/: controller.py
Project/engine/: main.py  pyproject.toml
Project/engine/core/: redis_client.py
Project/engine/data/: redis_client.py
Project/engine/models/: requests.py
Project/engine/schemas/: requests.py
Project/engine/snn/: emotion_infer.py
Project/engine/snn/modules/: SpikEmo_Model.py  spikformer.py
Project/engine/utils/: resolve_audio_path.py  whisper_transcriber.py
Project/frontend/: .gitignore  middleware.ts
Project/frontend/src/app/: layout.tsx  page.tsx
Project/frontend/src/lib/: api.ts  auth.ts  (+1 more)
snn/Documents/: notes.txt
snn/audio/: best_model.pth  instructions.txt  preparation.ipynb  snn_best_model.pth
snn/multimodal/: dataset.ipynb  notes.txt  preprocess_features_fastpreview.py  sort_data.py
snn/multimodal-snn/: new_model.ipynb
snn/multimodal-snn/evaluation_results/: classification_report.txt
snn/test/: SpikEmo_Model.py  test_spikemo.py  test_video.py
(+30 files in other folders)
